[gd_scene load_steps=8 format=3 uid="uid://4dr46qywa42t"]

[ext_resource type="Texture2D" uid="uid://bk8ola3ebtjm6" path="res://assets/tree.png" id="1_avsvi"]
[ext_resource type="Script" uid="uid://bslg5pnjdmc6j" path="res://scripts/tree.gd" id="2_vplca"]
[ext_resource type="PackedScene" uid="uid://cs6vorw8qhva2" path="res://scenes/click_indicator.tscn" id="3_viusy"]
[ext_resource type="Texture2D" uid="uid://c3d61suif5la0" path="res://assets/tree_hp_bar.png" id="4_qd6xs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_viusy"]
radius = 47.0538

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vplca"]
size = Vector2(101, 285)

[sub_resource type="CircleShape2D" id="CircleShape2D_qd6xs"]
radius = 190.066

[node name="Tree" type="Sprite2D"]
z_index = 1
texture = ExtResource("1_avsvi")
script = ExtResource("2_vplca")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1, 136.25)
shape = SubResource("CircleShape2D_viusy")

[node name="punch_hitbox" type="StaticBody2D" parent="."]
collision_mask = 0
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="punch_hitbox"]
position = Vector2(-0.5, 44.5)
shape = SubResource("RectangleShape2D_vplca")

[node name="click_indicator" parent="." instance=ExtResource("3_viusy")]
position = Vector2(-89, -2)

[node name="ProgressBar" type="TextureProgressBar" parent="click_indicator"]
offset_left = 165.0
offset_top = -53.0
offset_right = 229.0
offset_bottom = 139.0
max_value = 20.0
fill_mode = 3
texture_progress = ExtResource("4_qd6xs")

[node name="Timer" type="Timer" parent="."]

[node name="range_checker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range_checker"]
position = Vector2(1, 136)
shape = SubResource("CircleShape2D_qd6xs")

[connection signal="mouse_entered" from="punch_hitbox" to="." method="_on_punch_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="punch_hitbox" to="." method="_on_punch_hitbox_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="range_checker" to="." method="_on_range_checker_body_entered"]
[connection signal="body_exited" from="range_checker" to="." method="_on_range_checker_body_exited"]
[connection signal="mouse_exited" from="range_checker" to="." method="_on_range_checker_mouse_exited"]
